--- a/package.json
+++ b/package.json
@@ -34,10 +34,11 @@
     "type-check": "tsc --noEmit --skipLibCheck",
     "lint": "eslint . --format=codeframe",
     "lint:fix": "eslint . --format=codeframe --fix",
-    "validate": "pnpm run type-check && pnpm run lint && pnpm run test && pnpm run check-links",
+    "validate": "pnpm run type-check && pnpm run lint && pnpm run test && pnpm run check-links && pnpm run format:check",
     "prepack": "pnpm run validate",
     "prepublishOnly": "pnpm run clean && pnpm run validate && pnpm run build",
     "format": "prettier --write .",
+    "format:check": "prettier --check \"**/*.{js,ts,json,md,yml,yaml}\" \"docs/**/*.{md,vue}\"",
     "dev": "tsc -w -p tsconfig.json & tsc-alias -w -p tsconfig.json",
     "read-github": "NODE_OPTIONS=\"-r tsconfig-paths/register\" tsx scripts/read-github-cookies.ts",
     "prepare": "husky install",
