chore: fix formatting issues

--- a/scripts/tsconfig.json
+++ b/scripts/tsconfig.json
@@ -16,8 +16,5 @@
       "../src/*": ["../src/*"]
     }
   },
-  "include": [
-    ".",
-    "../src/**/*"
-  ]
+  "include": [".", "../src/**/*"]
 }
