fix: restore Chrome Safe Storage keychain access and simplify example
- Fix Chrome keychain access by reverting to service-only lookup

- Simplify basic usage example for better clarity

- Disable strict TypeScript rules in examples

- Update Chrome password retrieval implementation

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,8 @@
     "baseUrl": ".",
     "composite": true,
     "paths": {
+      "@mherod/get-cookie": ["src"],
+      "@mherod/get-cookie/*": ["src/*"],
       "@/*": ["src/*"],
       "@core/*": ["src/core/*"],
       "@utils/*": ["src/utils/*"],
