--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "include": ["src/**/*", "scripts/**/*", "*.ts", "examples/**/*"],
+  "include": ["src/**/*", "scripts/**/*", "*.ts", "examples/**/*", "test/**/*"],
   "compilerOptions": {
     "moduleResolution": "node",
     "target": "es2020",
