fix: use process.cwd() for test script paths

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "moduleResolution": "node",
     "target": "es2020",
-    "module": "es2020",
+    "module": "commonjs",
     "lib": ["es2018", "es2019", "es2020", "es2021", "dom"],
     "strict": true,
     "esModuleInterop": true,
