refactor: implement BaseCookieQueryStrategy architecture and fix tests (#214)
* docs: improve README clarity and value proposition

* fix: correct CircleCI script paths and commands

* chore: verify exports configuration in package.json

* fix: use process.cwd() instead of __dirname in test-binarycookies.ts

* ci: update CircleCI macOS configuration

* docs: add tasks documentation file

* feat: add TODO.md symlink for easy access to tasks

* refactor: implement BaseCookieQueryStrategy architecture and fix tests

* feat: migrate from CircleCI to GitHub Actions with enhanced workflows

* feat(ci): optimize GitHub Actions for pnpm compatibility

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,105 +5,128 @@ on:
     branches:
       - main
       - "release/**"
+      - "feature/**"
+      - "fix/**"
+      - "refactor/**"
   pull_request:
     branches:
       - main
       - "release/**"
 
+env:
+  HOMEBREW_NO_AUTO_UPDATE: 1
+
 jobs:
-  build:
+  build-and-test:
+    name: Build and Test
     runs-on: macos-latest
     strategy:
       matrix:
         node-version: [20.x, 22.x]
+      fail-fast: false
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-      - name: Use Node.js ${{ matrix.node-version }}
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 9.15.2
+
+      - name: Setup Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
-
-      - name: Install pnpm
-        uses: pnpm/action-setup@v2
-        with:
-          version: 9.15.2
-
-      - name: Get pnpm store directory
-        shell: bash
-        run: |
-          echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
-
-      - uses: actions/cache@v3
-        name: Setup pnpm cache
-        with:
-          path: ${{ env.STORE_PATH }}
-          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
-          restore-keys: |
-            ${{ runner.os }}-pnpm-store-
+          cache: "pnpm"
 
       - name: Install dependencies
-        run: pnpm install --no-frozen-lockfile
-
-      - name: Run all checks
-        run: pnpm run validate
-
-      - name: Build
-        run: pnpm run build
-
-  docs:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Use Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20.x
-
-      - name: Install pnpm
-        uses: pnpm/action-setup@v2
-        with:
-          version: 9.15.2
-
-      - name: Install dependencies
-        run: pnpm install --no-frozen-lockfile
-
-      - name: Build documentation
-        run: pnpm run docs
-
-      - name: Check for dead links
-        run: pnpm run check-links
-
-      - name: Upload documentation artifact
-        uses: actions/upload-pages-artifact@v3
-        with:
-          path: docs/.vitepress/dist
-
-  lint:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Use Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20.x
-
-      - name: Install pnpm
-        uses: pnpm/action-setup@v2
-        with:
-          version: 9.15.2
-
-      - name: Install dependencies
-        run: pnpm install --no-frozen-lockfile
+        run: pnpm install --frozen-lockfile
 
       - name: Run type check
         run: pnpm run type-check
 
-      - name: Run ESLint
+      - name: Run linting
         run: pnpm run lint
 
       - name: Check formatting
         run: pnpm run format:check
+
+      - name: Run tests
+        run: pnpm run test
+
+      - name: Check documentation links
+        run: pnpm run check-links
+
+      - name: Build project
+        run: pnpm run build
+
+      - name: Upload test coverage
+        uses: actions/upload-artifact@v4
+        if: matrix.node-version == '20.x'
+        with:
+          name: coverage-reports
+          path: coverage/
+          retention-days: 30
+
+  docs:
+    name: Build Documentation
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 9.15.2
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20.x
+          cache: "pnpm"
+
+      - name: Install dependencies
+        run: pnpm install --frozen-lockfile
+
+      - name: Build documentation
+        run: pnpm run docs
+
+      - name: Upload documentation artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: documentation
+          path: docs/.vitepress/dist/
+          retention-days: 30
+
+  validate:
+    name: Validate Package
+    runs-on: macos-latest
+    needs: [build-and-test, docs]
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 9.15.2
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20.x
+          cache: "pnpm"
+
+      - name: Install dependencies
+        run: pnpm install --frozen-lockfile
+
+      - name: Run complete validation
+        run: pnpm run validate
+
+      - name: Test package installation
+        run: |
+          pnpm pack
+          npm install -g ./mherod-get-cookie-*.tgz
+          get-cookie --help
