--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,12 @@
 {
   "useTabs": false,
+  "tabWidth": 2,
+  "printWidth": 80,
+  "trailingComma": "all",
+  "semi": true,
+  "singleQuote": false,
+  "bracketSpacing": true,
+  "arrowParens": "always",
   "overrides": [
     {
       "files": [".prettierrc", ".parcelrc"],
