fix: use pnpm link --global for CLI installation in CI
Replace npm install from tarball with pnpm link --global to ensure
consistent package manager usage throughout the CI workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -127,6 +127,6 @@ jobs:
 
       - name: Test package installation
         run: |
-          pnpm pack
-          npm install -g ./mherod-get-cookie-*.tgz
+          pnpm run build
+          pnpm link --global
           get-cookie --help
