feat: add Node.js 24 support
- Update engines field in package.json to include Node 24
- Add test-exports/ directory to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -132,3 +132,6 @@ cookie-creator
 # CookieCreator binary
 scripts/CookieCreator/Sources/main
 scripts/CookieCreator/main
+
+# Test exports directory
+test-exports/
