--- a/.github/workflows/comprehensive-tests.yml
+++ b/.github/workflows/comprehensive-tests.yml
@@ -18,6 +18,10 @@ jobs:
   advanced-tests:
     name: Run Advanced Test Scripts
     runs-on: macos-latest
+    strategy:
+      matrix:
+        node-version: [20.x, 22.x, 24.x]
+      fail-fast: false
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -27,10 +31,10 @@ jobs:
         with:
           version: 9.15.2
 
-      - name: Setup Node.js
+      - name: Setup Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v4
         with:
-          node-version: 20.x
+          node-version: ${{ matrix.node-version }}
           cache: "pnpm"
 
       - name: Install dependencies
@@ -49,7 +53,7 @@ jobs:
         uses: actions/upload-artifact@v4
         if: always()
         with:
-          name: advanced-test-results
+          name: advanced-test-results-${{ matrix.node-version }}
           path: |
             scripts/test-results/
             scripts/logs/
