fix: add @primno/dpapi as optional dependency for Windows CI
- Fixes Windows CI test failures for Chrome cookie decryption
- Package is optional so won't affect non-Windows platforms
- Enables native DPAPI support for Windows Chrome v10 cookies

--- a/package.json
+++ b/package.json
@@ -67,6 +67,9 @@
     "tsconfig-paths": "^4.2.0",
     "zod": "^3.24.1"
   },
+  "optionalDependencies": {
+    "@primno/dpapi": "^2.0.1"
+  },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
     "@commitlint/cli": "19.8.1",
