fix: remove unnecessary async keywords from ProcessDetector functions
These functions just return the promise from detectBrowserProcesses directly,
so they don't need to be async. This satisfies both Biome's useAwait rule
and ESLint's require-await rule.

--- a/biome.json
+++ b/biome.json
@@ -64,7 +64,10 @@
         "noPrototypeBuiltins": "error",
         "noUnsafeDeclarationMerging": "error",
         "useAwait": "error",
-        "useNamespaceKeyword": "error"
+        "useNamespaceKeyword": "error",
+        "noAsyncPromiseExecutor": "error",
+        "noMisleadingCharacterClass": "error",
+        "noThenProperty": "error"
       },
       "nursery": {
         "useSortedClasses": "off"
