feat: add cross-platform browser control with Strategy pattern
- Created PlatformBrowserControl interface and base class following SOLID principles
- Implemented platform-specific strategies for macOS, Windows, and Linux
- Refactored BrowserLockHandler to use dependency injection with platform strategies
- Updated Safari test mocks to include platform function for compatibility
- Follows DRY principle by extracting common browser control logic to base class
- Used factory function instead of static class per linter recommendations

--- a/.gitignore
+++ b/.gitignore
@@ -136,3 +136,7 @@ scripts/CookieCreator/main
 # Test exports directory
 test-exports/
 /.claude
+
+# Dependency analysis reports
+dependency-report.html
+madge-graph.svg
