feat: upgrade Biome to v2 and achieve full ESLint compliance
BREAKING CHANGE: Upgraded Biome from v1.9.4 to v2.0.6 with configuration migration

Major changes:
- Migrated Biome configuration to v2 schema format
- Achieved zero ESLint errors (fixed 221 issues)
- Added comprehensive JSDoc documentation for public APIs
- Refactored complex functions to meet code quality metrics

Biome v2 migration:
- Updated schema URL to biomejs.dev/schemas/2.0.6/schema.json
- Migrated files.ignore to files.includes with negated patterns
- Disabled useAwait rule to resolve ESLint promise-function-async conflict
- Disabled organizeImports to let ESLint handle import ordering

ESLint compliance fixes:
- Added complete JSDoc documentation with @param, @returns, @throws
- Fixed import ordering according to ESLint rules
- Refactored functions exceeding complexity limits (max: 10)
- Split large functions exceeding 100 lines
- Fixed TypeScript strict boolean expressions
- Replaced unsafe any types with proper typing
- Added nullish coalescing operators where appropriate

Code quality improvements:
- SafariCookieQueryStrategy: Reduced complexity from 22 to manageable levels
- FirefoxCookieQueryStrategy: Split 134-line function into helpers
- PlatformBrowserControl: Added proper access modifiers and documentation
- Removed unused SafeFileOperations utility

Testing:
- All tests pass with updated code
- Both Biome and ESLint report zero errors
- TypeScript compilation successful

--- a/biome.json
+++ b/biome.json
@@ -1,5 +1,5 @@
 {
-  "$schema": "https://biomejs.dev/schemas/1.9.4/schema.json",
+  "$schema": "https://biomejs.dev/schemas/2.0.6/schema.json",
   "vcs": {
     "enabled": true,
     "clientKind": "git",
@@ -8,13 +8,14 @@
   },
   "files": {
     "ignoreUnknown": false,
-    "ignore": [
-      "dist/**",
-      "node_modules/**",
-      "coverage/**",
-      "docs/.vitepress/cache/**",
-      "**/*.log",
-      ".parcel-cache/**"
+    "includes": [
+      "**",
+      "!**/dist/**",
+      "!**/node_modules/**",
+      "!**/coverage/**",
+      "!**/docs/.vitepress/cache/**",
+      "!**/*.log",
+      "!**/.parcel-cache/**"
     ]
   },
   "formatter": {
@@ -28,25 +29,33 @@
     "attributePosition": "auto",
     "bracketSpacing": true
   },
-  "organizeImports": { "enabled": true },
+  "assist": { "actions": { "source": { "organizeImports": "off" } } },
   "linter": {
     "enabled": true,
     "rules": {
       "recommended": true,
       "correctness": {
         "noUnusedImports": "error",
-        "noUnusedVariables": "error",
-        "useArrayLiterals": "off"
+        "noUnusedVariables": "error"
       },
       "style": {
         "useImportType": "error",
         "noNamespace": "error",
         "noNonNullAssertion": "error",
-        "noVar": "error",
         "useAsConstAssertion": "error",
         "useBlockStatements": "error",
         "useConst": "error",
-        "useLiteralEnumMembers": "error"
+        "useLiteralEnumMembers": "error",
+        "noParameterAssign": "error",
+        "useDefaultParameterLast": "error",
+        "useEnumInitializers": "error",
+        "useSelfClosingElements": "error",
+        "useSingleVarDeclarator": "error",
+        "noUnusedTemplateLiteral": "error",
+        "useNumberNamespace": "error",
+        "noInferrableTypes": "error",
+        "noUselessElse": "error",
+        "useArrayLiterals": "off"
       },
       "complexity": {
         "noStaticOnlyClass": "error",
@@ -63,11 +72,12 @@
         "noMisleadingInstantiator": "error",
         "noPrototypeBuiltins": "error",
         "noUnsafeDeclarationMerging": "error",
-        "useAwait": "error",
+        "useAwait": "off",
         "useNamespaceKeyword": "error",
         "noAsyncPromiseExecutor": "error",
         "noMisleadingCharacterClass": "error",
-        "noThenProperty": "error"
+        "noThenProperty": "error",
+        "noVar": "error"
       },
       "nursery": {
         "useSortedClasses": "off"
@@ -90,7 +100,7 @@
   },
   "overrides": [
     {
-      "include": [".prettierrc", ".parcelrc"],
+      "includes": ["**/.prettierrc/**", "**/.parcelrc/**"],
       "formatter": { "indentWidth": 2 }
     }
   ]
