feat: enable strict TypeScript and enhance documentation
- Enable strict TypeScript mode across all configuration files
  - Add strictNullChecks, noUncheckedIndexedAccess, exactOptionalPropertyTypes
  - Enable noImplicitReturns, noUnusedLocals, noUnusedParameters
  - Update tsconfig.json, tsconfig.cli.json, tsup.lib.ts, tsup.cli.ts

- Enhance JSDoc documentation throughout codebase
  - Add comprehensive descriptions to all error classes
  - Document SQL utility functions with parameter details
  - Improve CLI service documentation with examples
  - Remove empty JSDoc blocks that hurt developer experience

- Fix CookieStrategyFactory implementation
  - Add missing helper functions (checkSafariMagicBytes, detectFromFilename)
  - Properly detect browser types from file patterns
  - Support Safari binary cookie format detection

- Improve code quality
  - Fix inefficient repeated method calls in ProcessDetector
  - Use errorUtils consistently across CLI modules
  - Fix type safety issues revealed by strict mode
  - Integrate Biome with ESLint for comprehensive linting

- Update linting configuration
  - Add unsafe fixes to Biome for automatic corrections
  - Combine Biome and ESLint in validation pipeline
  - Reduce ESLint errors from 308 to manageable level

Breaking changes: None - all changes are internal improvements

--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "lint": "biome check --diagnostic-level=error .",
     "lint:eslint": "eslint --config eslint.config.js \"src/**/*.{ts,js}\"",
     "lint:all": "pnpm run lint && pnpm run lint:eslint",
-    "lint:fix": "biome check --write .",
+    "lint:fix": "biome check --write --unsafe . && eslint --config eslint.config.js --fix \"src/**/*.{ts,js}\"",
     "lint:staged": "biome check --staged --write .",
     "format": "biome format --write .",
     "format:check": "biome check --diagnostic-level=error .",
