fix: resolve all TypeScript strict mode errors
- Add non-null assertions for array access in test files and binary parsers
- Remove unused variables in Safari and SQL test files
- Fix exactOptionalPropertyTypes issues in EnhancedCookieQueryService
- Fix Buffer creation and array access in Safari binary cookie parsers
- Use delete instead of undefined assignment for optional properties
- Configure Biome to allow non-null assertions in test and binary parser files
- All tests now pass with strict TypeScript configuration

--- a/biome.json
+++ b/biome.json
@@ -102,6 +102,16 @@
     {
       "includes": ["**/.prettierrc/**", "**/.parcelrc/**"],
       "formatter": { "indentWidth": 2 }
+    },
+    {
+      "includes": ["**/*.test.ts", "**/*.spec.ts", "**/BinaryCodable*.ts"],
+      "linter": {
+        "rules": {
+          "style": {
+            "noNonNullAssertion": "off"
+          }
+        }
+      }
     }
   ]
 }
