feat: enhance security auditing and automation
- Fix Jest v30 + better-sqlite3 mocking issues for Firefox tests
- Update Husky hooks to remove deprecated syntax for v10 compatibility
- Enhance Dependabot configuration with grouping and better labels
- Add automated security audit workflow with weekly schedule
- Add security audit scripts to package.json (audit, audit:fix, outdated)
- All tests now passing with proper Jest v30 ES module support

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,3 +4,29 @@ updates:
     directory: "/"
     schedule:
       interval: "daily"
+    open-pull-requests-limit: 10
+    reviewers:
+      - "mherod"
+    assignees:
+      - "mherod"
+    commit-message:
+      prefix: "chore"
+      prefix-development: "chore"
+      include: "scope"
+    labels:
+      - "dependencies"
+      - "automated"
+    groups:
+      # Group minor and patch updates together
+      minor-and-patch:
+        patterns:
+          - "*"
+        update-types:
+          - "minor"
+          - "patch"
+      # Group major updates separately for review
+      major-updates:
+        patterns:
+          - "*"
+        update-types:
+          - "major"
