--- a/package.json
+++ b/package.json
@@ -40,6 +40,9 @@
     "format": "biome format --write .",
     "format:check": "biome check --diagnostic-level=error .",
     "validate": "pnpm run type-check && pnpm run lint && pnpm run test && pnpm run check-links && pnpm run format:check",
+    "audit": "pnpm audit --audit-level moderate",
+    "audit:fix": "pnpm audit --fix",
+    "outdated": "pnpm outdated",
     "prepack": "pnpm run validate",
     "prepublishOnly": "pnpm run clean && pnpm run validate && pnpm run build",
     "dev": "tsc -w -p tsconfig.json & tsc-alias -w -p tsconfig.json",
