chore(deps): upgrade mdast-util-to-hast to >=13.2.1

--- a/package.json
+++ b/package.json
@@ -121,7 +121,8 @@
   },
   "pnpm": {
     "overrides": {
-      "esbuild": "^0.25.0"
+      "esbuild": "^0.25.0",
+      "mdast-util-to-hast": ">=13.2.1"
     }
   },
   "lint-staged": {
